--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <script src="https://kit.fontawesome.com/903973536b.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-  <title>React App</title>
+  <title>Raymond Portfolio</title>
+  <link rel="icon" href="https://th.bing.com/th/id/OIG.m6tezxVpGhWaK8MhEy1y?pid=ImgGn" type="image/x-icon">
 </head>
 
 <body>
